# streamlogin

./: README.md
desktop/qt/desktopclient/: .gitignore  accountsdialog.cpp  accountsdialog.h  accountsdialog.ui  desktopclient.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  make-win-icon.sh  platform.cpp  platform.h  platform_linux.cpp  platform_linux.h  platform_win.cpp  platform_win.h  resources.qrc
desktop/winapi/: .gitignore  CMakeLists.txt  main.cpp
desktop/winapi/resources/: binary.manifest  res.rc
server/node/: .gitignore  configbase.json  server.js  usersbase.json
server/node/templates/: index.html
